<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.android.quizapp.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorQuestionBackground"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:padding="20dp"
                    android:text="@string/quizTitle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:text="@string/quizDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorQuestionBackground"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/Question1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"

                    android:text="@string/Question1Text" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioGroup1Button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1radio1" />

                    <RadioButton
                        android:id="@+id/radioGroup1Button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1radio2" />

                    <RadioButton
                        android:id="@+id/radioGroup1Button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1radio3" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorQuestionBackground"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/Question2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/Question2Text" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioGroup2Button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2radio1" />

                    <RadioButton
                        android:id="@+id/radioGroup2Button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2radio2" />

                    <RadioButton
                        android:id="@+id/radioGroup2Button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2radio3" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorQuestionBackground"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/Question3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/Question3Text" />

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioGroup3Button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3radio1" />

                    <RadioButton
                        android:id="@+id/radioGroup3Button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3radio2" />

                    <RadioButton
                        android:id="@+id/radioGroup3Button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3radio3" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorQuestionBackground"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/Question4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/Question4Text" />

                <RadioGroup
                    android:id="@+id/radioGroup4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioGroup4Button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4radio1" />

                    <RadioButton
                        android:id="@+id/radioGroup4Button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4radio2" />

                    <RadioButton
                        android:id="@+id/radioGroup4Button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4radio3" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorQuestionBackground"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/Question5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/Question5Text" />

                <RadioGroup
                    android:id="@+id/radioGroup5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioGroup5Button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5radio1" />

                    <RadioButton
                        android:id="@+id/radioGroup5Button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5radio2" />

                    <RadioButton
                        android:id="@+id/radioGroup5Button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5radio3" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorQuestionBackground"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/Question6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/Question6Text" />

                <RadioGroup
                    android:id="@+id/radioGroup6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioGroup6Button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6radio1" />

                    <RadioButton
                        android:id="@+id/radioGroup6Button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6radio2" />

                    <RadioButton
                        android:id="@+id/radioGroup6Button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6radio3" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBackgroundGrey" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="calculateScore"
                android:text="@string/buttonText" />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
